<resources>
    <string name="app_name">My Games Reviews</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_bar_hint">Search a game…</string>

    <string name="test_game_summary">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>

    <string name="details_fragment_label">Game details</string>
    <string name="my_reviews_label">My reviews</string>
    <string name="suggestions_fragment_label">Home</string>
    <string name="review_fragment_label">Add a review</string>

    <string name="details_my_rating_label">My rating:</string>
    <string name="details_my_review_label">My review:</string>
    <string name="details_summary_label">Summary:</string>
    <string name="details_name_label">Name:</string>
    <string name="details_button_review_label">Write your review</string>

    <string name="review_my_rating_label">My rating:</string>
    <string name="review_add_rating_button_label">Add rating</string>
    <string name="review_stop_rating_button_label">Stop</string>
    <string name="review_save_button_label">Save</string>
    <string name="review_type_your_review_hint">Type your review…</string>

    <string name="error_missing_review_fields">Please write your review and add a rating before you save</string>
</resources>