<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="game"
            type="com.vifrn.mygamesreviews.model.Game" />

        <variable
            name="viewModel"
            type="com.vifrn.mygamesreviews.review.ReviewViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".review.ReviewFragment">

        <EditText
            android:id="@+id/review"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start|top"
            android:hint="@string/review_type_your_review_hint"
            android:text="@={viewModel.review}"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toTopOf="@id/review_row"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/my_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review_my_rating_label"
            app:layout_constraintBottom_toTopOf="@+id/rating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/rating"
            rating='@{viewModel.shakeAmount}'
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="64sp"
            app:layout_constraintBottom_toTopOf="@+id/add_rating_button"
            app:layout_constraintEnd_toStartOf="@+id/middle_vert"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_rating"
            tools:text="0.0" />

        <ImageView
            android:id="@+id/star"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toTopOf="@+id/add_rating_button"
            app:layout_constraintStart_toEndOf="@+id/rating"
            app:layout_constraintTop_toBottomOf="@+id/my_rating"
            app:tint="@color/yellow_star" />

        <Button
            android:id="@+id/add_rating_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.buttonText}"
            android:onClick="@{() -> viewModel.toggleCapturingShake()}"
            app:layout_constraintBottom_toTopOf="@+id/save_review_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating"
            tools:text="@string/review_add_rating_button_label"/>

        <Button
            android:id="@+id/save_review_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/review_save_button_label"
            android:onClick="@{() -> viewModel.saveReview(game)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_vert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/review_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>